--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Installing Node.js"
-      - curl -sL https://rpm.nodesource.com/setup_14.x | sudo -E bash -
+      - echo "Installing Node.js 18"
+      - curl -sL https://rpm.nodesource.com/setup_18.x | sudo -E bash -
       - sudo yum install -y nodejs
   build:
     commands:
